<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_screen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:gravity="center"
        android:text="@string/app_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inBil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/hint_bil1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inBil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/hint_bil2" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_head"
        android:gravity="center"
        android:text="@string/label_result" />

    <TextView
        android:id="@+id/txResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/val_result"
        android:textSize="@dimen/text_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_jml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_jml" />

        <Button
            android:id="@+id/btn_kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_kurang" />

        <Button
            android:id="@+id/btn_kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_kali" />

        <Button
            android:id="@+id/btn_bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_bagi" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear" />
</LinearLayout>